# nakadion

./: CHANGELOG.md  Cargo.toml  README.MD  README.md
.github/workflows/: CI.yml
examples/: create_event_type.rs  schema_registry_api.rs  streaming_demo.rs  subscription_api.rs
nakadi-types/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
nakadi-types/src/: env_vars.rs  helpers.rs  lib.rs  misc.rs  partition.rs  publishing.rs
nakadi-types/src/event/: mod.rs  publishable.rs
nakadi-types/src/event_type/: event_type_input.rs  mod.rs
nakadi-types/src/model/: event.rs  event_type.rs  misc.rs  mod.rs  partition.rs  publishing.rs  subscription.rs
nakadi-types/src/model/event/: mod.rs  publishable.rs
nakadi-types/src/model/event_type/: event_type_input.rs  mod.rs
nakadi-types/src/model/subscription/: mod.rs  subscription_builder.rs  subscription_input.rs
nakadi-types/src/subscription/: mod.rs  subscription_input.rs
nakadion/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  docker-compose.yml
nakadion/examples/: complete_example.rs  connector.rs  consume_subscription.rs  integration.rs  schema_registry_api.rs  streaming_demo._rs  subscription_api.rs
nakadion/src/: env_vars.rs  event_stream.rs  handler.rs  helpers.rs  instrumentation.rs  lib.rs
nakadion/src/api/: api_ext.rs  client.rs  dispatch_http_request.rs  error.rs  mod.rs
nakadion/src/api/client/: get_subscriptions.rs  mod.rs  trait_impls.rs
nakadion/src/auth/: mod.rs
nakadion/src/components/: committer.rs  connector.rs  mod.rs
nakadion/src/components/committer/: background.rs  config.rs  mod.rs
nakadion/src/components/committer/background/: mod.rs  pending_cursors.rs
nakadion/src/components/connector/: config.rs  mod.rs
nakadion/src/components/streams/: framed.rs  mod.rs
nakadion/src/components/streams/batch_line/: mod.rs
nakadion/src/components/streams/event_stream/: line_parser.rs  mod.rs
nakadion/src/consumer/: config_types.rs  error.rs  instrumentation.rs  mod.rs
nakadion/src/consumer/config_types/: complex_types.rs  mod.rs  new_types.rs
nakadion/src/event_handler/: mod.rs
nakadion/src/event_stream/: framed.rs  mod.rs
nakadion/src/event_stream/batch_line/: line_parser.rs  mod.rs
nakadion/src/handler/: mod.rs  typed.rs
nakadion/src/instrumentation/: metrix.rs  metrix_impl.rs  mod.rs
nakadion/src/internals/: batch_line.rs  committer.rs  consumer.rs  controller.rs  dispatcher.rs  mod.rs  worker.rs
nakadion/src/internals/background_committer/: mod.rs  pending_cursors.rs
nakadion/src/internals/controller/: connect_stream.rs  consume_to_end.rs  mod.rs  partition_tracker.rs  sleep_ticker.rs  types.rs
nakadion/src/internals/controller/consume_to_end/: controller_state.rs  mod.rs  partition_tracker.rs
nakadion/src/internals/controller/consume_to_end/controller_state/: mod.rs  partition_tracker.rs
nakadion/src/internals/dispatcher/: all_seq.rs  disp_et_par.rs  disp_etp_par.rs  dispatch_all_sequential.rs  dispatch_event_type.rs  mod.rs  no_dispatch.rs
nakadion/src/internals/dispatcher/par/: et_par.rs  etp_par.rs  mod.rs
nakadion/src/logging/: mod.rs
nakadion/src/nakadi_api/: client.rs  mod.rs
nakadion/src/publisher/: mod.rs  partitioner.rs
nakadion/src/publisher/instrumentation/: metrix_impl.rs  mod.rs
nakadion/src/tools/: mod.rs
nakadion_types/: Cargo.toml
nakadion_types/src/: env_vars.rs  lib.rs
nakadion_types/src/model/: event.rs  event_type.rs  mod.rs  partition.rs  publishing.rs  subscription.rs
src/: cancellation_token.rs  clienterrors.rs  connector.rs  custom_headers.rs  env_vars.rs  event_stream.rs  helpers.rs  lib.rs  metrics.rs  stats.rs  tokenerrors.rs
src/api/: mod.rs
src/auth/: mod.rs
src/client/: clienterrors.rs  connector.rs  mod.rs  worker.rs
src/client/worker/: mod.rs  test.rs
src/internals/: consumer.rs  line_parser.rs  mod.rs
src/model/: core_model.rs  cursor.rs  event_type.rs  misc.rs  mod.rs  publishing.rs  subscription.rs
src/nakadi/: api.rs  api_client.rs  batch.rs  batchline.rs  batchprocessor.rs  client.rs  committer.rs  components.rs  connector.rs  consumer.rs  dispatcher.rs  events.rs  handler.rs  maintenance.rs  metrics.rs  mod.rs  model.rs  processor.rs  publisher.rs  stream.rs  streaming_client.rs  worker.rs
src/nakadi/metrics/: metrix.rs  mod.rs
src/nakadi/subscription/: committer.rs  connector.rs  consumer.rs  mod.rs  model.rs  processor.rs  stream.rs
src/nakadi_api/: client.rs  dispatch_http_request.rs  mod.rs  reqwest_client.rs
src/nakadi_types/: mod.rs
src/nakadi_types/model/: event.rs  event_type.rs  mod.rs  partition.rs  publishing.rs  subscription.rs  support_types.rs
src/subscription/: batch.rs  committer.rs  connector.rs  consumer.rs  mod.rs  model.rs  worker.rs
src/worker/: concurrentworker.rs  metrics.rs  mod.rs  partitionworker.rs  sequentialworker.rs  test.rs
src/worker/sequentialworker/: mod.rs  test.rs
