[package]
name = "nakadion"
version = "0.7.1"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A connector for the Nakadi Event Broker"
documentation = "https://docs.rs/nakadion"
homepage = "https://github.com/chridou/nakadion"
repository = "https://github.com/chridou/nakadion"
keywords = ["event", "broker", "distributed", "message", "nakadi"]

[dependencies]
log = "0.4"
uuid = {version = "0.5", features=["serde"] }
url = { version = "1.4" }
reqwest = "0.8"
hyper = "0.11"
failure = "0.1"
backoff = "0.1"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
metrix = { version = "0.6", optional = true }
[dev-dependencies]
env_logger = "0.5"
