[package]
name = "nakadion"
version = "0.11.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A connector for the Nakadi Event Broker"
documentation = "https://docs.rs/nakadion"
homepage = "https://github.com/chridou/nakadion"
repository = "https://github.com/chridou/nakadion"
keywords = ["event", "broker", "distributed", "message", "nakadi"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = {version = "0.2", features = ["fs"] }
bytes = "0.5"
log = "0.4"
uuid = {version = "0.8", features=["serde", "v4"] }
url = { version = "2.1", features = ["serde"] }
reqwest = {version = "0.10", features = ["stream"] }
http = "0.2"
http-api-problem = "0.14"
backoff = "0.1"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
metrix = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.7"
tokio = {version = "0.2", features = ["macros"] }
