[package]
name = "nakadion"
version = "0.15.1"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A connector for the Nakadi Event Broker"
documentation = "https://docs.rs/nakadion"
homepage = "https://github.com/chridou/nakadion"
repository = "https://github.com/chridou/nakadion"
keywords = ["event", "broker", "distributed", "message", "nakadi"]
edition = "2018"

[dependencies]
log = "0.4"
uuid = {version = "0.8", features=["serde", "v4"] }
url = { version = "2.1" }
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
failure = "0.1"
backoff = "0.1"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
metrix = { version = "0.10", optional = true }

[dev-dependencies]
env_logger = "0.7"
