[package]
name = "nakadion"
version = "0.24.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Types for interacting with the Nakadi Event Broker"
documentation = "https://docs.rs/nakadion"
homepage = "https://github.com/chridou/nakadion"
repository = "https://github.com/chridou/nakadion"
keywords = [ "nakadi", "event", "broker", "distributed","messaging"]
edition = "2018"

[dependencies]
nakadi-types = { path = "../nakadi-types", version="^0.24.0"}
futures = "0.3"
pin-utils = "0.1.0"
tokio = {version = "0.2", features = ["fs", "sync", "time", "stream", "rt-core", "blocking"] }
bytes = "0.5"
uuid = {version = "0.8", features=["serde", "v4"] }
url = { version = "2.1", features = ["serde"] }
reqwest = {version = "0.10", features = ["stream"], optional = true }
http = "0.2"
http-api-problem = "0.17"
backoff = "0.1"
serde = {version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
metrix = { version = "0.13", optional = true }
slog = { version = "2", optional = true}
log = { version="0.4", optional = true}
crc = {version = "1.8", optional = true }

[features]
default = ["reqwest"]
partitioner = ["crc"]

[dev-dependencies]
env_logger = "0.7"
tokio = {version = "0.2", features = ["macros"] }
slog-term = "2.5.0"
slog-async = "2.5.0"

[[example]]
name = "consume_subscription"

[[example]]
name = "integration"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


